# ftdi

./: .gitignore  Makefile  README.md  adafruit-ft232h-i2c.md  ftdi_eeprom.c  ftdi_eeprom.h  ftdi_gpio.c  ftdi_gpio_bitbang.c  ftdi_i2c.c  ftdi_mpsse.h  ftdi_mpsse_core.c  ftdi_spi.c  ftdi_uart.c  mpsse.md
.github/workflows/: check.yml  test.yml
benchmarks/: README.md  i2c_bench_kernel.c  i2c_bench_libmpsse.c  i2c_read_clkswitch_test.c  i2c_read_diag.c  meson.build
benchmarks/subprojects/: libmpsse.wrap
benchmarks/subprojects/packagefiles/libmpsse/: meson.build
benchmarks/subprojects/packagefiles/libmpsse/src/: config.h
doc/: hw-design.md
ftdi-emulation/: Makefile  README.md  ftdi_emu.c  ftdi_emu.h  main.c  usbip_proto.h  usbip_server.c  usbip_server.h
tests/: Makefile  README.md  error_test.c  gpio_test.c  hotplug_test.c  i2c_test.c  init.sh  spi_test.c  suspend_test.c  uart_test.c  uml.config  usbip_attach.c
tools/: ft232h-i2c.conf  ftdi_eeprom_check.c
